# VCID-PA-2024-PIKA

./: .gitignore  Dockerfile  README.md  babel.cfg  compose.yaml  config.toml  gunicorn.conf.py  pyproject.toml  setup_script.py  wsgi.py
docker/: compose.development.yaml  compose.production.yaml
migrations/versions/: 035b9fd75f39_add_user_roles_constraints.py  ce637ff6e131_initial_migration.py
pika/: __init__.py  config.py  forms.py  models.py  routes.py  search.py  setup.py
pika/admin/: __init__.py  administrator.py  forms.py
pika/admin/templates/admin/: accounts.html  dashboard.html  deactivate.html  macros.html  navigation.html  roles.html  settings.html  users.html
pika/admin/user/: __init__.py
pika/admin/user/edit/: forms.py  routes.py
pika/admin/user/profile/: routes.py
pika/api/: __init__.py  auth.py  authors.py  books.py  series.py  util.py
pika/api/data/: __init__.py
pika/api/data/api/: __init__.py  api_response.py  authors.py  books.py  series.py
pika/auth/: __init__.py  forms.py  mail.py  routes.py  utils.py
pika/auth/templates/auth/: login.html  register.html
pika/community/: __init__.py  data.py  forms.py  routes.py  util.py
pika/community/static/: questions.json
pika/community/templates/community/: contact.html  faq.html  index.html  macros.html  public_profile.html  thread.html
pika/static/js/: alerts.js
pika/templates/: base.html  index.html  search.html
pika/templates/components/footer/: footer.html
pika/templates/errors/: 401.html  404.html  error.html
requirements/: dev-req.txt  prod-req.txt
(+15 files in other folders)
